fix safari flex stretch

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -73,12 +73,14 @@ h1 {
 .photo.container {
   margin: 0.5rem;
   display: flex;
+  flex-direction: row;
   justify-content: center;
 }
 .photo.me {
   width: 60%;
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
   border-radius: 1rem;
+  align-items: flex-start;
 }
 .text.container {
   background: white;
